--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
+-e git+https://github.com/spdx/tools-python.git@276e30d5ddeae98e4cefb455b4d245506e6345b1#egg=spdx-tools
 isodate==0.6.0
 pkg-resources==0.0.0
 ply==3.11
 pyparsing==2.4.0
 rdflib==4.2.2
 six==1.12.0
-spdx-tools==0.5.4
